--- a/EJ2YEj3.lyx
+++ b/EJ2YEj3.lyx
@@ -605,7 +605,7 @@ La impedancia de entrada vista por el generador puede calcularse también
 placement H
 wide false
 sideways false
-status collapsed
+status open
 
 \begin_layout Plain Layout
 \align center
@@ -1070,7 +1070,7 @@ s se realizaron con las puntas en configuración x1):
 placement H
 wide false
 sideways false
-status collapsed
+status open
 
 \begin_layout Plain Layout
 \align center
@@ -1121,7 +1121,7 @@ Se obtuvieron resultados que se ajustan mejor a los resultados medidos:
 placement H
 wide false
 sideways false
-status collapsed
+status open
 
 \begin_layout Plain Layout
 \align center
@@ -1357,7 +1357,7 @@ En cuanto a la simulación en LTSpice, teniendo en cuenta el efecto de las
 placement H
 wide false
 sideways false
-status collapsed
+status open
 
 \begin_layout Plain Layout
 \align center
@@ -2578,7 +2578,7 @@ Utilizando el modelo de OpAmp LF356 como OA_X2 y el modelo TL081 como OA_X
 placement H
 wide false
 sideways false
-status open
+status collapsed
 
 \begin_layout Plain Layout
 \align center
@@ -3048,7 +3048,7 @@ Realizando la experiencia nuevamente, pero con el modelo TL081 como OA_X2
 placement H
 wide false
 sideways false
-status open
+status collapsed
 
 \begin_layout Plain Layout
 \align center
@@ -3667,6 +3667,56 @@ Para concluir, los efectos de las corrientes de bias y la tension de offset
  previamente el efecto de la interferencia de linea y el valor de los componente
 s que influyeron en la amplificacion de las caidas ocasionadas por las corriente
 s de bias.
+\end_layout
+
+\begin_layout Section
+Sensor de temperatura
+\end_layout
+
+\begin_layout Subsection
+Objetivos y resumen
+\end_layout
+
+\begin_layout Standard
+En la siguiente seccion se presenta el diseno de un sensor de temperatura
+ elaborado haciendo uso del integrado LM35, el cual tiene la particularidad
+ de proporcionar una tension de salida que varia linealmente con la temperatura.
+ El objetivo de diseno de dicho sensor es que sea capaz de medir temperaturas
+ en el rango de los 35ºC hasta los 45ºC, donde la tension de salida del
+ sensor sea una funcion lineal que va de 0V hasta 5V.
+ Una tension de 0V a la salida deberia corresponderse con una temperatura
+ de 35ºC y una tension de 5V con una temperatura de 45ºC.
+\end_layout
+
+\begin_layout Standard
+Asimismo, el sensor debe tener la posibilidad de calibrarlo y tambien una
+ medida de seguridad que impida que la tension de salida sea mayor a 6V
+ asi como tambien impedir que sea menor a -1V.
+ La calibracion del mismo se implemento mediante la utilizacion de dos presets(r
+esistencias variables), y la medida de seguirdad mediante el uso de un diodo
+ zener.
+\end_layout
+
+\begin_layout Subsection
+Diseno y funcionamiento del dispositivo
+\end_layout
+
+\begin_layout Subsubsection
+Integrado LM35
+\end_layout
+
+\begin_layout Subsubsection
+Diseno implementado
+\end_layout
+
+\begin_layout Standard
+Una vez que se obtiene la tension de salida del LM35, lo que resta para
+ cumplir las especificaciones de rango es desplazar la tension y ajustar
+ la pendiente de la recta.
+\end_layout
+
+\begin_layout Subsection
+Datasheet
 \end_layout
 
 \end_body
